--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
     <div class="c1">
       <!-- <div id="logo">       -->
-      <img id="logo" src="/gigly_4.png" alt="gigly" width="20%">
+      <img id="logo" src="images/gigly_4.png" alt="gigly" width="20%">
       <!-- </div> -->
       <input type="text" name="search" id="search" placeholder="search brands,products and more">
       <!-- <span id="nav-search-submit-text" class="nav-search-submit-text nav-sprite nav-progressive-attribute" aria-label="Go"> -->
@@ -44,13 +44,13 @@
 
   <div class="slideshow">
     <div class="slide">
-      <img src="/Screenshot_1.png" alt="Slide 1" width="100%">
+      <img src="images/Screenshot_1.png" alt="Slide 1" width="100%">
     </div>
     <div class="slide">
-      <img src="/Screenshot_2.png" alt="Slide 2" width="100%">
+      <img src="images/Screenshot_2.png" alt="Slide 2" width="100%">
     </div>
     <div class="slide">
-      <img src="/Screenshot_3.png" alt="slide 3" width="100%">
+      <img src="images/Screenshot_3.png" alt="slide 3" width="100%">
     </div>
     <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
     <button class="next" onclick="changeSlide(1)">&#10095;</button>
@@ -63,21 +63,21 @@
   <!-- loop items -->
   <div class="brands">
     <div class="brand">
-      <img src="/Screenshot_15.png" alt="brand 1" height="300em" width="250">
+      <img src="images/Screenshot_15.png" alt="brand 1" height="300em" width="250">
 
     </div>
 
     <div class="brand">
-      <img src="/Screenshot_16.png" alt="brand 2" height="300em" width="250">
+      <img src="images/Screenshot_16.png" alt="brand 2" height="300em" width="250">
     </div>
 
     <div class="brand">
-      <img src="/Screenshot_17.png" alt="brand 3" height="300" width="250">
+      <img src="images/Screenshot_17.png" alt="brand 3" height="300" width="250">
 
     </div>
 
     <div class="brand">
-      <img src="/xda8b5cp.png" alt="brand 4" height="300" width="250">
+      <img src="images/xda8b5cp.png" alt="brand 4" height="300" width="250">
 
     </div>
   </div>
@@ -114,7 +114,7 @@
     <div class="categories">
 
       <div class="item">
-        <img src="/Screenshot_4.png" alt="mats" width="200">
+        <img src="images/Screenshot_4.png" alt="mats" width="200">
 
         <h4>Mats</h4>
 
@@ -122,7 +122,7 @@
       </div>
 
       <div class="item">
-        <img src="/Screenshot_5.png" alt="" width="200">
+        <img src="images/Screenshot_5.png" alt="" width="200">
 
 
         <h4>Wellness</h4>
@@ -131,7 +131,7 @@
       </div>
 
       <div class="item">
-        <img src="/Screenshot_6.png" alt="" width="200">
+        <img src="images/Screenshot_6.png" alt="" width="200">
 
         <h4>Toys</h4>
 
@@ -141,7 +141,7 @@
       </div>
 
       <div class="item">
-        <img src="/Screenshot_8.png" alt="" width="200">
+        <img src="images/Screenshot_8.png" alt="" width="200">
 
         <h4>Accessories</h4>
 
@@ -150,7 +150,7 @@
       </div>
 
       <div class="item">
-        <img src="/Screenshot_9.png" alt="" width="200">
+        <img src="images/Screenshot_9.png" alt="" width="200">
 
         <h4>Cat Food</h4>
 
@@ -158,7 +158,7 @@
       </div>
 
       <div class="item">
-        <img src="/Screenshot_10.png" alt="" width="200">
+        <img src="images/Screenshot_10.png" alt="" width="200">
 
         <h4>Cat Litter</h4>
 
@@ -172,16 +172,16 @@
   <div class="dash_dog">
     <h3>Lets chase fun with Dash Dog</h3>
     <div class="dash">
-      <img src="/Screenshot_18.png" alt="" width="250">
+      <img src="images/Screenshot_18.png" alt="" width="250">
     </div>
     <div class="dash">
-      <img src="/Screenshot_19.png" alt="" width="250">
+      <img src="images/Screenshot_19.png" alt="" width="250">
     </div>
     <div class="dash">
-      <img src="/Screenshot_20.png" alt="" width="250">
+      <img src="images/Screenshot_20.png" alt="" width="250">
     </div>
     <div class="dash">
-      <img src="/Screenshot_24.png" alt="" width="250">
+      <img src="images/Screenshot_24.png" alt="" width="250">
     </div>
 
   </div>
@@ -190,23 +190,23 @@
 
 
   <div class="offer_bar3">
-    <img src="/Screenshot_11.png" alt="" width="100%">
+    <img src="images/Screenshot_11.png" alt="" width="100%">
   </div>
 
   <div class="pet_toys">
     <h3>Fun ways to keep your pets busy</h3>
 
     <div class="toys">
-      <img src="/Screenshot_21.png" alt="" width="20%">
+      <img src="images/Screenshot_21.png" alt="" width="20%">
     </div>
     <div class="toys">
-      <img src="/Screenshot_22.png" alt="" width="20%">
+      <img src="images/Screenshot_22.png" alt="" width="20%">
     </div>
     <div class="toys">
-      <img src="/Screenshot_23.png" alt="" width="20%">
+      <img src="images/Screenshot_23.png" alt="" width="20%">
     </div>
     <div class="toys">
-      <img src="/Screenshot_7.png" alt="" width="20%">
+      <img src="images/Screenshot_7.png" alt="" width="20%">
     </div>
   </div>
 
